[tool.poetry]
name = "flameshow"
version = "0.1.4"
description = ""
authors = ["laixintao <laixintaoo@gmail.com>"]
maintainers = ["laixintao <laixintaoo@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/laixintao/flameshow"
keywords = ["terminal", "golang", "pprof", "flamegraph"]
packages = [{include = "flameshow"}]
include = [
    { path = "go", format = "sdist" }
]

[tool.poetry.build]
script = "build.py"
generate-setup-file = true

[tool.poetry.dependencies]
python = "^3.10"
typing-extensions = "^4.7.1"
textual = "^0.37.1"
click = "^8.1.7"
cffi = "^1.15.1"

[tool.poetry.scripts]
flameshow = 'flameshow.main:main'

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"

[build-system]
# TODO should add this to deps?
requires = ["poetry-core>=1.6.1", "setuptools"]
build-backend = "poetry.core.masonry.api"
