[tool.poetry]
name = "flameshow"
version = "1.1.2"
homepage = "https://github.com/laixintao/flameshow"
description = "A Terminal Flamegraph Viewer"
authors = ["laixintao <laixintaoo@gmail.com>"]
maintainers = ["laixintao <laixintaoo@gmail.com>"]
readme = "README.md"
license = "GPLv3"
keywords = ["terminal", "golang", "pprof", "flamegraph"]
packages = [{include = "flameshow"}]
include = [
    { path = "docs", format = "sdist" },
    { path = "tests", format = "sdist" },
    { path = "proto", format = "sdist" },
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    # "Programming Language :: Python :: 3.7",
    # "Programming Language :: Python :: 3.8",
    # "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/laixintao/flameshow/issues"

[tool.poetry.dependencies]
python = "^3.10"
typing-extensions = "^4.7.1"
textual = "^0.37.1"
click = "^8.1.7"
protobuf = "^4.24"
iteround = "^1.0.4"

[tool.poetry.scripts]
flameshow = 'flameshow.main:main'

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
ipdb = "^0.13.13"
flake8 = "^6.1.0"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py37']
preview = true
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
(
  .*_pb2.py  # exclude autogenerated Protocol Buffer files anywhere in the project
)
'''

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.run]
omit = [
    "flameshow/pprof_parser/profile_pb2.py",
    "flameshow/exceptions.py",
]

[tool.coverage.report]
exclude_lines = [
    'pragma: no cover',
    'if TYPE_CHECKING:',
    'if __name__ == "__main__":',
    '@overload',
    '__rich_repr__',
    '@abstractmethod',
    'NotImplementedError',
]
