[tool.poetry]
name = "flamegraph-textual"
version = "0.1.0"
description = "Terminal flamegraph renderer built on Textual"
authors = ["laixintao <laixintaoo@gmail.com>"]
readme = "README.md"
license = "GPLv3"
packages = [{include = "flamegraph_textual"}]

[tool.poetry.dependencies]
python = "^3.10"
iteround = "^1.0.4"
rich = "^13.6.0"
textual = "^0.37.1"
typing-extensions = "^4.7.1"
protobuf = "^4.25"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
